# goquant_assessment

./: CMakeLists.txt  goquant_assessment  readme.md
config/: CMakeCache.txt  Makefile  cmake_install.cmake  config.json  goquant_assessment
include/: mexc_api.h  websocket_client.h
src/: main.cpp  mexc_api.cpp  websocket_client.cpp
